Revision history for Dist-Zilla-PluginBundle-Author-OALDERS

{{$NEXT}}

0.000027  2020-02-24 21:05:45Z
    - s/PodCoverageTests/Test::Pod::Coverage::Configurable/

0.000026  2020-01-30 16:00:50Z
    - Remove last reference to MAXMIND::TidyAll

0.000025  2020-01-14 15:54:42Z
    - Copy Dist::Zilla::Plugin::MAXMIND::TidyAll into
      Dist::Zilla::Plugin::OALDERS::TidyAll

0.000024  2019-11-06 02:26:15Z
    - Add MojibakeTests, Test::EOL, Test::Portability and Test::Version

0.000023  2019-04-04 13:08:45Z
    - Fix cpanfile

0.000022  2019-04-02 16:59:55Z
    - Add StaticInstall and CheckIssues

0.000021  2019-02-05 02:42:04Z
    - Add Code::TidyAll::Plugin::UniqueLines to develop requires

0.000020  2018-11-14 18:44:26Z
    - Add develop prereqs for tidyall
    - Add PodSyntaxTests

0.000019  2018-05-15 13:51:44Z
    - Default ExecDir to /script

0.000018  2018-01-31 16:26:50Z
    - Add fallback_version_provider for RewriteVersion::Transitional

0.000017  2017-11-16 03:15:23Z
    - Start using Git::VersionManager

0.000016  2017-09-06 20:19:38Z
    - Remove ManifestSkip plugin

0.000015  2017-07-04 20:45:30Z
    - Exclude copy from release files from Git::GatherDir
    - Add Config::Slicer role
    - Move plugins from module to dist.ini

0.000014  2017-07-04 16:21:36Z
    - Copy Install from release rather than build

0.000013  2017-06-30 22:52:35Z
    - Re-order more plugins

0.000012  2017-06-29 22:11:19Z
    - Re-order some plugins

0.000011  2017-06-15 17:37:56Z
    - Use UTC for NextRelease
    - Use RunExtraTests rather than ExtraTests
    - Add MetaConfig plugin
    - Add PromptIfStale plugin

0.000010  2017-04-21 09:27:47-04:00 America/Toronto
    - Adds Dist::Zilla::Plugin::Test::ReportPrereqs

0.000009  2017-01-03 22:27:06-05:00 America/Toronto
    - Fix order of README generation

0.000008  2016-10-19 17:56:18-04:00 America/Toronto
    - Copy INSTALL and META.json from build

0.000007  2016-09-12 17:55:26-04:00 America/Toronto