@@ -1,0 +1,62 @@
+---
+name: dzil
+
+on:
+  - push
+
+jobs:
+  build:
+    name: Build and Test
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 1
+      matrix:
+        perl-version:
+          - "5.14"
+          - "5.16"
+          - "5.18"
+          - "5.20"
+          - "5.22"
+          - "5.24"
+          - "5.26"
+          - "5.28"
+          - "5.30"
+    container:
+      image: perl:${{ matrix.perl-version }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: Debug
+        run: env | sort
+      - name: Install cpm
+        run: >
+          curl -sL https://git.io/cpm > /usr/local/bin/cpm &&
+          chmod 755 /usr/local/bin/cpm
+      - name: Install deps
+        run: >
+          cpm install -g
+          --cpanfile cpanfile
+          --show-build-log-on-failure
+      - name: Install Author deps
+        run: >
+          dzil authordeps |
+          grep -v Author::OALDERS |
+          xargs cpm install -g --show-build-log-on-failure
+      - name: Build
+        run: dzil build --no-tgz --in dzil_build_dir
+      - name: Install remaining deps
+        if: success()
+        run: >
+          cd dzil_build_dir
+          && cpm install -g
+          --cpanfile cpanfile
+          --with-develop
+          --with-suggests
+          --show-build-log-on-failure
+      - name: Run Tests
+        if: success()
+        env:
+          AUTHOR_TESTING: 1
+          RELEASE_TESTING: 1
+        run: >
+          cd dzil_build_dir
+          && prove -lvr --jobs 2 t xt
