@@ -1,3 +1,6 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.014
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "Code::TidyAll::Config::INI::Reader" => "0.44";
 requires "Code::TidyAll::Plugin::SortLines::Naturally" => "0.000003";
 requires "Code::TidyAll::Plugin::UniqueLines" => "0.000003";
@@ -40,6 +43,7 @@ requires "Dist::Zilla::Plugin::ShareDir" => "0";
 requires "Dist::Zilla::Plugin::StaticInstall" => "0.012";
 requires "Dist::Zilla::Plugin::Test::CPAN::Changes" => "0";
 requires "Dist::Zilla::Plugin::Test::EOL" => "0";
+requires "Dist::Zilla::Plugin::Test::Pod::Coverage::Configurable" => "0";
 requires "Dist::Zilla::Plugin::Test::PodSpelling" => "0";
 requires "Dist::Zilla::Plugin::Test::Portability" => "0";
 requires "Dist::Zilla::Plugin::Test::ReportPrereqs" => "0";
