@@ -59,6 +59,7 @@ Dist::Zilla::Plugin::ShareDir = 0
 Dist::Zilla::Plugin::StaticInstall = 0.012
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
 Dist::Zilla::Plugin::Test::EOL = 0
+Dist::Zilla::Plugin::Test::Pod::Coverage::Configurable = 0
 Dist::Zilla::Plugin::Test::PodSpelling = 0
 Dist::Zilla::Plugin::Test::Portability = 0
 Dist::Zilla::Plugin::TestRelease = 0
